# Pico-app

./: .gitignore  ALL.h  Builder.bat  Builder_en.bat  CMakeLists.txt  HANDOFF.md  README.md  main.c  tud_cdc_descript.c  tud_cdc_descript.h
build_check/: CMakeCache.txt
build_check2/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/src/pioasmBuild-stamp/: pioasmBuild-source_dirinfo.txt
build_check2/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/tmp/: pioasmBuild-cfgcmd.txt  pioasmBuild-mkdirs.cmake
include/: HTU21D.h  command_defs.h  command_handler.h  commands.h  gpio.h  htu21df.h
pico-host/: ALL.h
pico-host/include/: ALL.h  uart_bridge.h
src/: ALL.h  HTU21D.c  command_handler.c  gpio.c  htu21df.c  main.c  tud_cdc_descript.c  tud_cdc_descript.h
